--- a/01-ola-mundo.html
+++ b/01-ola-mundo.html
@@ -7,6 +7,14 @@
         <title>
             Minha primeira página HTML
         </title>
+        <script>
+            // let serve para declarar uma variavel
+            // nome é uma variavel
+            // prompt = fazer pergunta e resposta
+            // alert = mensagem para o usuario
+            let nome = prompt('Qual é o seu nome?')
+            alert('Olá, ' + nome)
+        </script>
     </head>
     <body>
         <h1>
