--- a/ex01-par-impar.html
+++ b/ex01-par-impar.html
@@ -12,7 +12,8 @@
     ou ímpar e informe ao usuário usando alert().
         */
        // Variáveis
-       let num1 = Number(prompt('Informe um número:'))
+       // parseInt(): TENTA converter uma string eu um número INTEIRO
+       let num1 = parseInt(prompt('Informe um número:'))
        // Operações
        if(isNaN(num1)) {
             alert('ERRO: O valor informado não é um número!')
