--- a/ex06-estrada.html
+++ b/ex06-estrada.html
@@ -17,14 +17,14 @@
             informe com document.write todos aqueles que têm um pedágio ou um posto
             de atendimento ao usuário da AUTOBURACON S/A.
         */
-       // Variaveis
-       let comprimento 
+        // variaveis
+        let comprimento = parseInt(prompt('Informe uma quilometragem inteira maior que 200km:'))
        // Comandos
        do {
            comprimento = parseInt(prompt('Informe uma quilometragem inteira maior que 200km:'))
        } while (isNaN(comprimento) || comprimento <= 200) {
-            let km = 1
-            while(km <= comprimento) {
+            
+            /*while(km <= comprimento) {
                 if(km % 31 === 0) {
                 document.write(`O km ${km} tem um pedágio<br>`)
                 }
@@ -32,7 +32,15 @@
                 document.write(`O km ${km} tem um posto de atendimento ao usuário<br>`)
                 }
             }
-            km++ //Incrementa o quilômetro percorrido
+            km++ //Incrementa o quilômetro percorrido */
+            for(let km = 1; km <= comprimento; km++) {
+                if(km % 31 === 0) {
+                    document.write('O km '+ km + ' tem um pedágio<br>')
+                }
+                if(km % 23 === 0) {
+                    document.write('O km ' + km + ' tem um posto de atendimento')
+                }
+            }
        }
     </script>
 </head>
